--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Whirlpool\\": "src/whirlpool/"
+            "Whirlpool\\": "vendor/whirlpool/"
         }
     }
 }
