--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/database": "4.2.9",
-        "aura/router": "2.1.1",
         "twig/twig": "1.16.2",
-        "ircmaxell/password-compat": "1.0.3"
+        "ircmaxell/password-compat": "1.0.3",
+        "nikic/fast-route": "0.7.0"
     },
     "autoload": {
         "psr-4": {
