--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Whirlpool\\": "src/whirlpool/"
+            "Whirlpool\\": "src/"
         }
     }
 }
